# cipher_vichiennet_aimee

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
cipher_iv2264_v1/: LICENSE  README.md
cipher_iv2264_v1/docs/: example.ipynb
cipher_iv2264_v1/src/cipher_iv2264/: cipher_iv2264.py
cipher_iv2264_v1/tests/: __init__.py  test_cipher_iv2264.py
docs/: make.bat
hw07/: .zshrc  pyproject.toml
hw07/cipher_iv2264/: README.md  pyproject.toml
hw07/cipher_iv2264/tests/: test_cipher_iv2264.py
hw07/cipher_iv2264_v1/: CHANGELOG.md  pyproject.toml
hw07/cipher_iv2264_v1/docs/: Makefile  conf.py
src/cipher_iv2264/: cipher_iv2264.py
tests/: test_cipher_iv2264.py
