[tool.poetry]
name = "mds"
version = "0.1.0"
description = "QMSS Modern Data Structures"
authors = ["Thomas Brambor <Thomas.Brambor@columbia.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
Faker = "^4.14.0"
xlrd = "^1.2.0"
pandas = "^1.1.3"
numpy = "1.21.0"
matplotlib = "^3.3.2"
jupyterthemes = "^0.20.0"
jupyter-contrib-nbextensions = "^0.5.1"
rise = "^5.7.0"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
plotly = "^4.12.0"
requests = "^2.24.0"
jupyter_nbextensions_configurator = "^0.4.1"
notebook = "^6.1.4"
pytest-mock = "^3.3.1"
nbconvert = "^6.0.7"
bs4 = "^0.0.1"
html5lib = "^1.1"
cssselect = "^1.1.0"
selenium = "^3.141.0"
ipython-sql = "^0.4.0"
pyodbc = "^4.0.30"
psycopg2-binary = "^2.8.6"
PyMySQL = "^0.10.1"
gprof2dot = "^2019.11.30"
snakeviz = "^2.1.0"
memory-profiler = "^0.58.0"
tabulate = "^0.8.7"
GPUtil = "^1.4.0"
popen = "^0.1.20"
pandarallel = "^1.5.1"
ipywidgets = "^7.5.1"
pandas-profiling = "^3.0.0"
openpyxl = "^3.0.9"
python-dotenv = "^0.19.1"
modin = "^0.11.3"
jupyterlab = "^3.4.5"
sp = "^1.1.0"
spotipy = "^2.20.0"
scipy = "^1.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
black = "^20.8b1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
